# Henrietta-Guider

./: .gitignore  ALGORITHM.md  BRAINSTORM-STATUS.md  Makefile  Questions-for-William.md  README.md  Wireformat.md  pyproject.toml
.github/workflows/: ci.yml
experiments/: demo_end_to_end_pipeline.py  demo_xcor_on_real_data.py  drip_test_frames.py  show_what_xcor_sees.py  sim_gui_snapshot.py  sim_replay.py  watchdog_close_event_test.py
henrietta_guider/: runtime.py
henrietta_guider/cli/: __main__.py
henrietta_guider/core/: audio.py  autoguider_server.py  bpm.py  config.py  controller.py  framebuffer.py  geometry.py  monte_carlo.py  quality.py  reducer.py  sanity.py  sky.py  stale.py  store.py  target_switch.py  tcs_client.py  template.py  types.py  watcher.py  wire.py  worker.py  xcor.py
henrietta_guider/tui/: _image_window_subprocess.py  app.py  command_prompt.py  estimate_k_dialog.py  image_window.py  settings_dialog.py
mockups/: estimate_k_mockup.py  gui_mockup.py
tests/integration/: fakes.py  test_runtime.py  test_watcher.py  test_worker.py
tests/unit/: test_alerts_widget.py  test_audio.py  test_autoguider_server.py  test_bpm.py  test_command_prompt.py  test_config.py  test_control_panel.py  test_controller.py  test_framebuffer.py  test_geometry.py  test_monte_carlo.py  test_quality.py  test_reducer.py  test_sanity.py  test_settings_dialog.py  test_sky.py  test_smoke.py  test_stale.py  test_store.py  test_target_switch.py  test_tcs_client.py  test_template.py  test_timeseries_widget.py  test_tui_state.py  test_types.py  test_wire.py  test_xcor.py
(+6 files in other folders)
